--- a/index.html
+++ b/index.html
@@ -168,6 +168,119 @@
         </div>
 
 
+        <!-- contact  -->
+        <div class="row justify-content-evenly pt-2 pb-5" style="background-color: #f1f1f1;">
+          <div class="col-md-5 mt-5">
+            <h3 class="mb-4">Contact Form</h3>
+
+            <form>
+                  <div class="mb-3">
+                    <label for="name" class="form-label"> Full Name</label>
+                    <input type="name" class="form-control" id="name">
+                  </div>
+
+                  <div class="mb-3">
+                    <label for="exampleInputEmail1" class="form-label">Email address</label>
+                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                    <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+                  </div>
+
+                  <div class="mb-3">
+                    <label for="exampleFormControlTextarea1" class="form-label">Message</label>
+                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                  </div>
+                  
+                  <button type="submit" class="btn btn-primary">Submit</button>
+                </form>
+
+          </div>
+          <div class="col-md-5 mt-5">
+            <h3 class="mb-4">Address</h3>
+            <p>1180 Kimbley Way, WILLISTON PARK <br>
+              New York - 11596 <br>
+              <i class="bi bi-telephone"></i> :909090909  
+            </p>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d22803.218447479587!2d-73.99213319468763!3d40.80827898809314!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c2588f046ee661%3A0xa0b3281fcecc08c!2sManhattan%2C%20New%20York%2C%20NY%2C%20USA!5e0!3m2!1sen!2sin!4v1678441711356!5m2!1sen!2sin" style="width: 100%;" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+          </div>
+        </div>
+
+        <!-- FAQ Section  -->
+
+        <div class="row justify-content-evenly pb-5 pt-5" >
+          <div class="col-md-10 pb-4">
+            <h3 class="text-center">FAQ</h3>
+
+            <div class="accordion accordion-flush border" id="accordionFlushExample">
+              <div class="accordion-item">
+                <h2 class="accordion-header" id="flush-headingOne">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                    Accordion Item #1
+                  </button>
+                </h2>
+                <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+                  <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the first item's accordion body.</div>
+                </div>
+              </div>
+              <div class="accordion-item">
+                <h2 class="accordion-header" id="flush-headingTwo">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                    Accordion Item #2
+                  </button>
+                </h2>
+                <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
+                  <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the second item's accordion body. Let's imagine this being filled with some actual content.</div>
+                </div>
+              </div>
+              <div class="accordion-item">
+                <h2 class="accordion-header" id="flush-headingThree">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+                    Accordion Item #3
+                  </button>
+                </h2>
+                <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
+                  <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more exciting happening here in terms of content, but just filling up the space to make it look, at least at first glance, a bit more representative of how this would look in a real-world application.</div>
+                </div>
+              </div>
+            </div>
+
+
+          </div>
+        </div>
+
+        <!-- Footer  -->
+
+        <div class="row justify-content-evenly bg-dark text-white pt-2 pb-5">
+          <div class="col-md-3 pt-4">
+            <h5 class="pb-2">MOHD SAIF</h5>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus, alias commodi libero dicta obcaecati sapiente magni ratione dignissimos quia voluptates! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reprehenderit, quod nemo! Animi recusandae nihil consectetur repellendus tenetur dolorum praesentium neque.</p>
+          </div>
+          <div class="col-md-3 pt-4">
+            <h5 class="pb-2">Importants Links</h5>
+            <p> <a href="#" class="link-light text-decoration-none ">Home</a> <br>
+             <a href="#" class="link-light text-decoration-none ">About Us</a> <br>
+             <a href="#" class="link-light text-decoration-none ">Contact Us</a> <br>
+             <a href="#" class="link-light text-decoration-none ">Our Team</a> <br>
+             <a href="#" class="link-light text-decoration-none ">Our Client</a> <br>
+
+            </p>
+          </div>
+
+          <div class="col-md-3 pt-4">
+            <h5 class="pb-2">Contact</h5>
+            <p>1180 Kimbley Way, WILLISTON PARK <br>
+              New York - 11596 <br>
+              <i class="bi bi-telephone"></i> : 909090909  
+            </p>
+          </div>
+          </div>
+          <!-- copyright section -->
+
+          <div class="row text-center bg-secondary text-white p-2">
+            <div class="col-12 ">
+              <p>Copyright 1999-2023 by Mohd Saif. All right Reserved.</p>
+            </div>
+          </div>
+
         <!-- container end  -->
       </div>
       
